# pytic2

./: LICENSE  README.md  setup.cfg
pytic2/: __init__.py  pyi2c.py  pytic2.py
