[metadata]
name = pytic2
version = 0.0.1
author = Søren Rievers
description = Python wrapper for the Pololu Tic stepper driver series.
long_descripton = file: README.md 
long_descripton_content_type = text/markdown
url = https://bitbucket.org/srievers/pytic2
keywords = python, driver, motor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Raspberry Pi OS

[options]
python_requires = >=3.7
install_requires =
    smbus2
    PyYAML

