[metadata]
name = pytic2
version = 0.0.1
author = Søren Rievers
description = Python wrapper for the Pololu Tic Stepper Motor Controller series.
long_descripton = file: README.md 
long_descripton_content_type = text/markdown
url = https://github.com/SRievers/pytic2
keywords = python, driver, stepper motor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = false
python_requires = >=3.7
install_requires =
    smbus2

